I Change The Main Web Desing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1 class="brand"><a href="index.html">J<span>A</span>Y</a></h1>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="#">Blog</a></li>
         <li><a href="#">About Me</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -92,19 +92,11 @@
 
   
   <canvas id="nokey" width="800" height="800">
-    Your Browser Don't Support Canvas, Please Download Chrome ^_^``
+    <!-- Your Browser Don't Support Canvas, Please Download Chrome ^_^`` -->
   </canvas>
 
   
-
-
-
-    
-<!--     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js" integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js" integrity="sha512-LQQDtPAueBcmGXKdOBcMkrhrtqM7xR2bVrnMtYZ8ImAZhFlIb5xrMqQ6uZviyeSB+4mYj89ta8niiCIQM1Gj0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-     -->
-    
+  
   <script src="./Js/script.js"></script>
 </body>
 
