I add about page

--- a/index.html
+++ b/index.html
@@ -22,31 +22,30 @@
   <div class="menu-toggle" id="hamburger">
     <i class="fas fa-bars"></i>
   </div>
-
-  <div class="overlay">
-  </div>
-
   <div class="container">
     <nav>
       <h1 class="brand"><a href="index.html">J<span>A</span>Y</a></h1>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">About Me</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Skills</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </div>
 
+
+  
   <div class="home-content">
     <h3 class="Itme">Hello, It's Me</h3>
     <h1>Jayesh Patil</h1>
     <h3 class="Ai">And I'm a <span class="text"></span></h3>
-    <!-- <p>with expertise in creating website designs, frontend development, and various other aspects
-      of web development....</p> -->
+    <p>with expertise in creating website designs, frontend development, and various other aspects
+      of web development....</p>
     <div class="social-buttons">
 
-      <a href="https://www.linkedin.com/in/jayeshpatil1553/" target="_blank" class="social-buttons__button social-button social-button--linkedin" aria-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/jayeshpatil1553/" target="_blank"
+        class="social-buttons__button social-button social-button--linkedin" aria-label="LinkedIn">
         <span class="social-button__inner">
           <i class="fab fa-linkedin-in"></i>
         </span>
@@ -61,42 +60,101 @@
       </a>
 
 
-      <a href="https://github.com/Jayeshpatil9869" target="_blank" class="social-buttons__button social-button social-button--github" aria-label="GitHub">
+      <a href="https://github.com/Jayeshpatil9869" target="_blank"
+        class="social-buttons__button social-button social-button--github" aria-label="GitHub">
         <span class="social-button__inner">
           <i class="fab fa-github"></i>
         </span>
       </a>
 
 
-      <a href="https://twitter.com/Jayeshpatil1553" target="_blank" class="social-buttons__button social-button social-button--codepen"
-        aria-label="CodePen">
+      <a href="https://twitter.com/Jayeshpatil1553" target="_blank"
+        class="social-buttons__button social-button social-button--codepen" aria-label="CodePen">
         <span class="social-button__inner">
           <i class="fab fa-twitter"></i>
         </span>
       </a>
 
-      <a href="https://youtube.com/@Rjarts9869" target="_blank" class="social-buttons__button social-button social-button--youtube" aria-label="YouTube">
+      <a href="https://youtube.com/@Rjarts9869" target="_blank"
+        class="social-buttons__button social-button social-button--youtube" aria-label="YouTube">
         <span class="social-button__inner">
           <i class="fab fa-youtube"></i>
         </span>
       </a>
-      
+
     </div>
+
   </div>
-  <div class="img">
-    <!-- <img src="./images/photo.webp" alt="">   -->
+  
+  
+  <div class="scroll-down-wrap no-border">
+    <a href="#" class="section-down-arrow ">
+      <svg class="nectar-scroll-icon" viewBox="0 0 30 45" enable-background="new 0 0 30 45">
+        <path class="nectar-scroll-icon-path" fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" d="M15,1.118c12.352,0,13.967,12.88,13.967,12.88v18.76  c0,0-1.514,11.204-13.967,11.204S0.931,32.966,0.931,32.966V14.05C0.931,14.05,2.648,1.118,15,1.118z">
+        </path>
+      </svg>
+    </a>
   </div>
+
   
 
 
-
-  
   <canvas id="nokey" width="800" height="800">
     <!-- Your Browser Don't Support Canvas, Please Download Chrome ^_^`` -->
   </canvas>
 
+  <section class="about-me" id="about-me">
+    <div class="container">
+      <div class="about-me-container">
+        <div class="about-me-title">
+          About <br> Smit Prajapati
+        </div>
+  
+        <div class="about-me-flex-container">
+          <div class="about-me-image">
+            <div class="back-div"></div>
+            <div class="black-image"><img src="https://raw.githubusercontent.com/Smit-Prajapati/prajapatismit/main/images/black.jpg" alt="black"></div>
+            <div class="main-image"><img src="https://raw.githubusercontent.com/Smit-Prajapati/prajapatismit/main/images/smit.jpg" alt="smit"></div>
+          </div>
+          <div class="about-me-content">
+  
+            <div class="logo"><img src="https://raw.githubusercontent.com/Smit-Prajapati/prajapatismit/20391be8bf1ed24ef0e5da066bf68a5f6ee78fa1/images/logo.svg" alt="smit"></div>
+  
+            <div class="text">
+              An ambitious Front-end Developer and designer who takes great pride in the presentation and quality of work. 
+  
+              <br><br>
+  
+              Smit is someone who can design and create simple, beautiful and easy to understand things. He is an expert at taking designs into original, exciting and new directions. 
+            </div>
+          </div>
+        </div>
+  
+        <div class="mail-button mail-button2">
+          <a href="mailto:prajapatismit2906@gmail.com"><img src="https://raw.githubusercontent.com/Smit-Prajapati/prajapatismit/20391be8bf1ed24ef0e5da066bf68a5f6ee78fa1/images/mail.svg" alt="mail"></a>
+        </div>
+  
+      </div>
+  
+    </div>
+  </section>
   
   
+  
+  
+  
+  
+  <br>
+  <div class = "portfolio-link">
+    <a href="https://smit-prajapati.github.io/prajapatismit/" target="_blank"> My Portfolio </a>
+    <a href="https://dribbble.com/shots/18565056-Tommy-Hans-Personal-Portfolio-Landing-Page-Website?utm_source=Clipboard_Shot&utm_campaign=Adhiari_is&utm_content=Tommy%20Hans%20-%20Personal%20Portfolio%20Landing%20Page%20Website&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=Adhiari_is&utm_content=Tommy%20Hans%20-%20Personal%20Portfolio%20Landing%20Page%20Website&utm_medium=Social_Share" target="_blank"> UI Design by Tommy Hans </a>
+  </div>
+  
+  
+  
+  
+
+
   <script src="./Js/script.js"></script>
 </body>
 
