--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="./Css/style.css">
 
-  <link rel="shortcut icon" href="./Images/favicon_io (2)/favicon-32x32.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/favicon_io (2)/favicon-32x32.png" type="image/x-icon">
 
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
@@ -84,7 +84,7 @@
     </div>
   </div>
   <div class="img">
-    <!-- <img src="./Images/profile-pic.png" alt=""> -->
+    <!-- <img src="./images/profile-pic.png" alt=""> -->
   </div>
   
 
