--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   
               <br><br>
   
-              Smit is someone who can design and create simple, beautiful and easy to understand things. He is an expert at taking designs into original, exciting and new directions. 
+              I can design and create simple, beautiful and easy to understand things. He is an expert at taking designs into original, exciting and new directions. 
             </div>
             
           </div>
