--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
           </div>
         </div>
   
-        <div class="mail-button mail-button2">
+        <!-- <div class="mail-button mail-button2">
           <a href="mailto:jayeshbpatil8830@gmail.com.com"><img src="./images/211660_email_icon.svg" alt="mail"></a>
-        </div>
+        </div> -->
   
       </div>
       
