--- a/index.html
+++ b/index.html
@@ -160,11 +160,14 @@
     </div>
     <div class="download">
         <i class="fas fa-download"></i>
-        <span>Download</span>
+        <span>Download-Cv</span>
     </div>
 </a>
 
   
+
+
+
    
 
   <script src="./Js/script.js"></script>
