--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <div class="home-content">
     <h3 class="Itme">Hello, It's Me</h3>
-    <h1>Jayesh Patil9869</h1>
+    <h1>Jayesh Patil</h1>
     <h3 class="Ai">And I'm a <span class="text"></span></h3>
     <p>with expertise in creating website designs, frontend development, and various other aspects
       of web development....</p>
